--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "neo4j>=6.0.2",
+    "unstructured-ingest[neo4j]>=1.2.19",
     "unstructured[local-inference,neo4j]>=0.18.15",
 ]
